# PQC-Auth-Service

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/examples/: hybrid_jwt_example.py
src/pq_auth/: config.py  main.py
src/pq_auth/auth/: models.py  router.py  schemas.py  service.py
src/pq_auth/pqc/: hybrid.py  kem.py  signatures.py
src/pq_auth/utils/: jwt.py
